chrome overflow fix

--- a/content/popup.css
+++ b/content/popup.css
@@ -4,7 +4,7 @@ body {
 	margin: 0;
 	width: max-content;
 	max-width: 800px;
-	height: 100%;
+	max-height: 600px;
 }
 
 body {
@@ -12,12 +12,12 @@ body {
 		"Ubuntu", "Helvetica Neue", Arial, sans-serif;
 	background: #fff;
 	color: #202023;
+	display: flex;
 }
 
 #container {
 	display: flex;
 	flex-direction: column;
-	height: 100%;
 }
 
 #urlList {
